gccida/g1/dump_edge_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_edge_info/src/cfg.c:1026:16: error: use of undeclared identifier 'off_6376D2'
fprintf( file, off_6376D2, ( unsigned int)dest->index); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_edge_info/src/cfg.c:1051:17: error: use of undeclared identifier 'off_6376D2'
fprintf( file, &off_6376D2[1], ( unsigned int)v6); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_edge_info/src/cfg.c:1053:8: error: use of undeclared identifier 'bitnames_8'
fputs( bitnames_8[v6], file); 
       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_edge_info/src/obj/cfg.o] Error 1
